force-app/main/default/objects/QB_Bundle_Item__c/QB_Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>QB Bundle Item</label>
    <nameField>
        <label>QB Bundle Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bundle Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>