force-app/main/default/objects/QB_Bundle_Item__c/fields/QB_Bundle_Group__c.field-meta.xml
<CustomField>
    <fullName>QB_Bundle_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle/Group</label>
    <referenceTo>QB_Item__c</referenceTo>
    <relationshipLabel>QB Bundle Items (Bundle/Group)</relationshipLabel>
    <relationshipName>QB_Bundle_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>