force-app/main/default/objects/QB_Bundle_Item__c/fields/QB_Item__c.field-meta.xml
<CustomField>
    <fullName>QB_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>QB_Item__c</referenceTo>
    <relationshipLabel>QB Bundle Items</relationshipLabel>
    <relationshipName>QB_Bundle_Items</relationshipName>
    <type>Lookup</type>
</CustomField>