force-app/main/default/objects/QB_Bundle_Item__c/fields/QB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QB_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>